--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
                 <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
                 <button type="submit">Send Message</button>
             </form>
-            <p>Email: info@infrascholars.org</p>
-            <p>Phone: +216 12 345 678</p>
-            <p>Location: Tunis, Tunisia</p>
+            <p>Email: ksibi.aziz@gmail.com </p>
         </section>
     </div>
     <footer>
