--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         <a href="#portfolio">Portfolio</a>
         <a href="#about">About Us</a>
         <a href="#contact">Contact</a>
+        <!-- Language Switcher -->
+        <a href="index.html">English</a> | 
+        <a href="fr/index.html">Français</a>
     </nav>
     <div class="container">
         <section id="services">
