--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
                 <li><strong>IT Infrastructure Planning & Deployment:</strong> Sizing and deployment of servers, storage, and networking solutions.</li>
                 <li><strong>Open Science Infrastructure:</strong> Repository systems, research dashboards, and PID integration (DOI, ORCID, ROR).</li>
                 <li><strong>Digital Modernization Consulting:</strong> Legacy system audits, optimization strategies, and compliance advisory.</li>
-                <li><strong>Digitization Services:</strong> High-res scanning, OCR, metadata creation, and archival integration.</li>
+                <li><strong>Digitization Services:</strong> HDigital objects, metadata curation, and archival integration.</li>
                 <li><strong>Training & Support:</strong> SLA-based support and capacity building for staff and researchers.</li>
             </ul>
         </section>
         <section id="portfolio">
             <h2>Project Portfolio</h2>
             <div class="portfolio-item">
-                <h3>University of Tunis Digital Archive</h3>
-                <p>Developed a fully searchable archive of historical theses and manuscripts using OCR and repository integration.</p>
+                <h3>DOCiD (Digital Object Container iD)</h3>
+                <p>Developed a fully searchable multilinear archive for theses, manuscripts and digital objects using open source systems, APIs and repository integration.</p>
             </div>
             <div class="portfolio-item">
                 <h3>Open Science Framework at National Research Lab</h3>
