--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background: url('Screenshot 2025-04-24 at 21.03.23.png') no-repeat center center fixed;
+        background: url('https://github.com/NabilAzizK/InfraScholars/blob/main/Screenshot%202025-04-24%20at%2021.03.23.png') no-repeat center center fixed;
         background-size: cover;
         color: #333;
     }
